[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"
authors = ["assert0 <assert0@github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
regex = "1.11.1"
lazy_static = "1.5.0"
#convolve2d = "0.2.0"
#counter = "0.6.0"
#lcmx = "0.1.7"
#rusttype = "0.9.3"
#ascii_converter = "0.3.0"
#geo = "0.29.2"
#lstsq = "0.6.0"
#nalgebra = "0.33.2"
